--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -35,6 +35,6 @@ jobs:
       run: PIC_SEED=0 php artisan migrate --seed
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
+        DB_CONNECTION: mysql
+        DB_DATABASE: xshop
       run: php artisan test
